[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "samplaction"
version = "0.1.1"
description = "CLI tool for assembly QC summarization and outlier filtering"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    'pandas>=2.2',
    'scikit-learn>=1.5.0',
    'seaborn>=0.13.2',
    'matplotlib>=3.10.8'
]

[project.scripts]
samplaction = "samplaction.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
